Update to Valhalla based on JDK 23, add benchmarks for Kotlin Valhalla Value Classes